--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 certifi==2022.5.18.1
 Django==4.0.4
+django-cors-headers==3.13.0
 django-filter==21.1
 djangorestframework==3.13.1
 pytz==2022.1
